--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@testing-library/react": "^9.4.0",
         "@testing-library/user-event": "^7.2.1",
         "axios": "^0.19.2",
+        "formik": "^2.1.4",
         "formsy-react": "^2.0.0",
         "http-status-codes": "^1.4.0",
         "leaflet": "^1.6.0",
