--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
         "formik": "^2.1.4",
         "formsy-react": "^2.0.0",
         "http-status-codes": "^1.4.0",
+        "i18next": "^19.3.2",
+        "i18next-browser-languagedetector": "^4.0.2",
+        "i18next-xhr-backend": "^3.2.2",
         "leaflet": "^1.6.0",
         "moment": "^2.24.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-i18next": "^11.3.3",
         "react-leaflet": "^2.6.1",
         "react-moment": "^0.9.7",
         "react-notifications": "^1.4.3",
