--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-        "tsc": "tsc",
         "dev": "nodemon ./src/server.ts",
         "prod": "tsc && cross-env NODE_ENV=production node ./build/server.js",
+        "tsc": "tsc",
         "fix:prettier": "prettier --write \"**/*\""
     },
     "keywords": [],
@@ -14,48 +14,35 @@
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.27",
         "@fortawesome/free-brands-svg-icons": "^5.12.1",
-        "@fortawesome/free-solid-svg-icons": "^5.12.1",
         "@fortawesome/react-fontawesome": "^0.1.9",
-        "@material-ui/core": "^4.9.5",
+        "@material-ui/core": "^4.9.7",
         "@material-ui/icons": "^4.9.1",
-        "@next/bundle-analyzer": "^9.3.0",
-        "@types/compression": "^1.7.0",
-        "@types/dotenv": "^8.2.0",
-        "@types/express": "^4.17.3",
-        "@types/react-custom-scrollbars": "^4.0.6",
-        "@types/react-dom": "^16.9.5",
-        "@types/react-map-gl": "^5.2.0",
+        "@material-ui/lab": "^4.0.0-alpha.46",
         "axios": "^0.19.2",
         "compression": "^1.7.4",
         "cross-env": "^7.0.2",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "fs": "0.0.1-security",
         "http-status-codes": "^1.4.0",
-        "i18next": "^19.3.2",
-        "i18next-icu": "^1.2.1",
-        "isomorphic-unfetch": "^3.0.0",
+        "i18next": "^19.3.3",
         "mapbox-gl": "^1.8.1",
         "moment": "^2.24.0",
-        "next": "^9.3.0",
-        "next-compose-plugins": "^2.2.0",
+        "next": "^9.3.1",
         "next-i18next": "^4.2.1",
-        "react": "^16.13.0",
-        "react-custom-scrollbars": "^4.2.1",
-        "react-dom": "^16.13.0",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
         "react-map-gl": "^5.2.3",
-        "react-moment": "^0.9.7",
-        "react-notifications": "^1.5.0-beta.0",
-        "react-perfect-scrollbar": "^1.5.8",
-        "semantic-ui-react": "^0.88.2",
-        "swr": "^0.1.18"
+        "react-moment": "^0.9.7"
     },
     "devDependencies": {
-        "@types/node": "^13.9.1",
+        "@types/compression": "^1.7.0",
+        "@types/express": "^4.17.3",
+        "@types/node": "^13.9.2",
         "@types/react": "^16.9.23",
-        "@zeit/next-css": "^1.0.1",
-        "ts-node": "^8.6.2",
-        "ts-node-dev": "^1.0.0-pre.44",
+        "@types/react-dom": "^16.9.5",
+        "@types/react-map-gl": "^5.2.0",
+        "nodemon": "^2.0.2",
+        "ts-node": "^8.7.0",
         "typescript": "^3.8.3"
     }
 }
