--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "axios": "^0.19.2",
         "compression": "^1.7.4",
         "cross-env": "^7.0.2",
+        "d3-ease": "^1.0.6",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "http-status-codes": "^1.4.0",
@@ -36,6 +37,7 @@
     },
     "devDependencies": {
         "@types/compression": "^1.7.0",
+        "@types/d3-ease": "^1.0.9",
         "@types/express": "^4.17.3",
         "@types/node": "^13.9.3",
         "@types/react": "^16.9.25",
