--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
         "d3-ease": "^1.0.6",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "http-proxy-middleware": "^1.0.3",
         "http-status-codes": "^1.4.0",
         "i18next": "^19.3.3",
         "mapbox-gl": "^1.8.1",
         "moment": "^2.24.0",
-        "next": "^9.3.1",
+        "next": "^9.3.3",
+        "next-cookies": "^2.0.3",
         "next-i18next": "^4.2.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
