--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-map-gl": "^5.2.3",
-        "react-moment": "^0.9.7"
+        "react-moment": "^0.9.7",
+        "react-share": "^4.1.0",
+        "reactjs-popup": "^1.5.0"
     },
     "devDependencies": {
         "@types/compression": "^1.7.0",
