--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.27",
-        "@fortawesome/free-brands-svg-icons": "^5.12.1",
+        "@fortawesome/fontawesome-svg-core": "^1.2.28",
+        "@fortawesome/free-brands-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
-        "@material-ui/core": "^4.9.7",
+        "@material-ui/core": "^4.9.10",
         "@material-ui/icons": "^4.9.1",
-        "@material-ui/lab": "^4.0.0-alpha.46",
+        "@material-ui/lab": "^4.0.0-alpha.49",
         "axios": "^0.19.2",
         "compression": "^1.7.4",
         "cross-env": "^7.0.2",
@@ -26,29 +26,30 @@
         "express": "^4.17.1",
         "http-proxy-middleware": "^1.0.3",
         "http-status-codes": "^1.4.0",
-        "i18next": "^19.3.3",
-        "mapbox-gl": "^1.8.1",
+        "i18next": "^19.4.2",
+        "mapbox-gl": "^1.9.1",
         "moment": "^2.24.0",
-        "next": "^9.3.3",
+        "next": "^9.3.5",
         "next-cookies": "^2.0.3",
-        "next-i18next": "^4.2.1",
+        "next-i18next": "^4.3.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-map-gl": "^5.2.3",
         "react-moment": "^0.9.7",
         "react-share": "^4.1.0",
-        "reactjs-popup": "^1.5.0"
+        "reactjs-popup": "^1.5.0",
+        "webpack": "^4.42.1"
     },
     "devDependencies": {
         "@types/compression": "^1.7.0",
         "@types/d3-ease": "^1.0.9",
-        "@types/express": "^4.17.3",
-        "@types/node": "^13.9.3",
-        "@types/react": "^16.9.25",
-        "@types/react-dom": "^16.9.5",
-        "@types/react-map-gl": "^5.2.1",
-        "nodemon": "^2.0.2",
-        "ts-node": "^8.8.1",
+        "@types/express": "^4.17.6",
+        "@types/node": "^13.11.1",
+        "@types/react": "^16.9.34",
+        "@types/react-dom": "^16.9.6",
+        "@types/react-map-gl": "^5.2.2",
+        "nodemon": "^2.0.3",
+        "ts-node": "^8.8.2",
         "typescript": "^3.8.3"
     }
 }
